--- a/GrupoEmpresarial-war/web/login.xhtml
+++ b/GrupoEmpresarial-war/web/login.xhtml
@@ -59,14 +59,14 @@
                     <p:growl id="growl" sticky="true" showDetail="true" life="3000" />
                     <div class="ui-grid ui-grid-responsive">
                         <div class="ui-grid-row">
-                            <div class="ui-grid-col-2"></div>
+                            <div class="ui-grid-col-2">&nbsp;</div>
                             <div class="ui-grid-col-8">
                                 <p:outputLabel value="#{aplicacionPrincipal.sistemaInfo.textoBienvenida}" escape="false"/>
                                     <center>
                                         <p:commandButton value="Ingresar" id="btnIngresar" onclick="PF('dlg').show()" icon="fa-share"/>
                                     </center>    
                             </div>
-                            <div class="ui-grid-col-2"></div>
+                            <div class="ui-grid-col-2">&nbsp;</div>
                         </div>
                     </div>
 
