--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/itz-informe-establecimiento.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/itz-informe-establecimiento.xhtml
@@ -19,7 +19,7 @@
                                 <p>En esta sección el usuario puede generar un reporte en formato PDF, donde se describe todos establecimientos de la unidad legal seleccionada.</p>
                                 <p:selectOneMenu id="cboUnidadLegal" value="#{MbFormEstablecimiento.idIdentificacionSeleccionada}" 
                                                  filter="true" filterMatchMode="contains" >
-                                    <p:ajax event="change" listener="#{MbFormEstablecimiento.mySelectionMethodListener}" update="dtEstablecimiento,btnGenerarReporteEstablecimientos"/>
+                                    <p:ajax event="change" listener="#{MbFormEstablecimiento.mySelectionMethodListener}" update="dtEstablecimiento,btnGenerarReporteEstablecimientos,btnGenerarXlsEstablecimiento"/>
                                     <f:selectItem itemLabel="Unidad legal..." itemValue="" />
                                     <f:selectItems value="#{MbFormEstablecimiento.listaIdentificacionUnidadLegal}" var="unidadLegal" itemLabel="#{unidadLegal.nombreRegistrado}" itemValue="#{unidadLegal.id.id}"/>
                                 </p:selectOneMenu>
@@ -73,10 +73,10 @@
                                 <h4 class="titulo-left-h3">Actualizar información desde archivo XLS</h4>
                                 <p>En esta sección el usuario puede descargar un archivo XLS, que contiene la información del grupo empresarial, la cual podra
                                     actualizar de forma local y al terminar subir el archivo para actualizar los datos.</p>
-                                <p:commandButton id="btnGenerarXlsGrupoEmpresa" value="Generar Excel" ajax="false" 
-                                                 actionListener="#{MbEscribirExcel.generarArchivoXlsGrupoEmpresarial(nerv['plantilla.grupoEmpresarial.path'], nerv['plantilla.grupoEmpresarial.archivo'])}"
+                                <p:commandButton id="btnGenerarXlsEstablecimiento" value="Generar Excel" ajax="false"  disabled="#{empty MbFormEstablecimiento.listaIdentificacion}" 
+                                                 actionListener="#{MbEscribirExcelEstablecimiento.generarArchivoXls(nerv['plantilla.establecimiento.path'], nerv['plantilla.establecimiento.archivo'])}"
                                                  onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
-                                    <p:fileDownload value="#{MbEscribirExcel.file}" />
+                                    <p:fileDownload value="#{MbEscribirExcelEstablecimiento.file}" />
                                 </p:commandButton>
                                 <p>Subir el archivo con la ifnromación de los establecimientos diligenciados para actualizar los datos.</p>
                                 <p:fileUpload fileUploadListener="#{MbLeerExcel.subirArchivoGrupoEmpresarial}" style="width: 50%"
