--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-identificacion.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-identificacion.xhtml
@@ -20,12 +20,12 @@
                          maxlength="149" onblur="value = value.toUpperCase()"  required="true" requiredMessage="El Nombre Registrado es requerido."/>
             <p:message for="txtNombreRegistrado"/>
 
-            <p:outputLabel value="NIT:" styleClass="etiquetaFormulario"/>
+            <p:outputLabel for="txtNit" value="NIT:" styleClass="etiquetaFormulario"/>
             <h:panelGrid columns="5" >
                 <p:inputText id="txtNit" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nit}" style="width: 250px;"
                              required="true" requiredMessage="El NIT es requerido."/>
                 <p:message for="txtNit" display="tooltip"/>
-                <p:outputLabel value="DV:" styleClass="etiquetaFormulario"/>
+                <p:outputLabel for="txtDigitoVerificacion" value="DV:" styleClass="etiquetaFormulario"/>
                 <p:inputText id="txtDigitoVerificacion" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.digitoVerificacion}"  maxlength="1"
                              required="true" requiredMessage="El DV es requerido." style="width: 20px;"/>
                 <p:message for="txtDigitoVerificacion" display="tooltip"/>
