--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-tamano.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-tamano.xhtml
@@ -12,7 +12,7 @@
 
             <h:outputText value="Activo: *" styleClass="etiquetaFormulario"/>
             <p:inputText value="#{MbFormGrupoEmpresa.tamanoSeleccionado.activo}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Activo es requerido.">
-                <f:convertNumber currencySymbol="$" pattern="#000.000"/>
+                <!--f:convertNumber currencySymbol="$" pattern="#000.000"/-->
             </p:inputText>
 
             <h:outputText value="Pasivo: *" styleClass="etiquetaFormulario"/>
