--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/itz-informe-unidad-legal.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/itz-informe-unidad-legal.xhtml
@@ -17,9 +17,16 @@
                             <div class="ui-grid-col-12">
                                 <h4 class="titulo-left-h3">Generación de Reporte</h4>
                                 <p>En esta sección el usuario puede generar un reporte en formato PDF, donde se describe todos los datos de la unidades legales del grupo empresarial.</p>
-                                <p:commandButton id="btnGenerarReporteUnidadLegal" value="Generar reporte" update="dlgReportePdf" oncomplete="PF('dlg').show();"
+                                <p:commandButton id="btnGenerarReporteUnidadLegal" value="Generar reporte" rendered="#{aplicacionPrincipal.browserName != 'Internet Explorer'}"
+                                                 update="dlgReportePdf" oncomplete="PF('dlg').show();"
                                                  actionListener="#{MbReporteUnidadLegal.generarReporteUnidadesLegalesPdf(nerv['reporte.unidadLegales.path'], nerv['reporte.unidadLegales.archivo'])}"/>
                                 <!--p:media value="#{MbReporteUnidadLegal.contenido}" cache="false" width="100%" height="90%" player="pdf"/-->
+                                <p:commandButton id="btnDescargarReporteUnidadLegal" value="Descargar" ajax="false" 
+                                                 rendered="#{aplicacionPrincipal.browserName eq 'Internet Explorer'}" 
+                                                 actionListener="#{MbReporteUnidadLegal.generarReporteUnidadesLegalesPdf(nerv['reporte.unidadLegales.path'], nerv['reporte.unidadLegales.archivo'])}"
+                                                 onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
+                                    <p:fileDownload value="#{MbReporteUnidadLegal.contenido}" />
+                                </p:commandButton>
                             </div>
                         </div>
                         <div class="ui-grid-row">
@@ -60,17 +67,15 @@
                                 <h4 class="titulo-left-h3">Actualizar información desde archivo XLS</h4>
                                 <p>En esta sección el usuario puede descargar un archivo XLS, que contiene el listado de unidades legales del grupo empresarial, la cual podra
                                     actualizar de forma local y al terminar subir el archivo para actualizar los datos.</p>
-                                <p:commandButton id="btnGenerarXlsGrupoEmpresa" value="Generar Excel" ajax="false" 
+                                <p:commandButton id="btnGenerarXlsUnidadLelgal" value="Generar Excel" ajax="false" 
                                                  actionListener="#{MbEscribirExcelUnidadLegal.generarArchivoXls(nerv['plantilla.unidadLegal.path'], nerv['plantilla.unidadLegal.archivo'])}"
                                                  onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
                                     <p:fileDownload value="#{MbEscribirExcelUnidadLegal.file}" />
                                 </p:commandButton>
                                 <p>Subir el archivo con la ifnromación de las unidades legales diligenciada para actualizar los datos.</p>
-                                <p:fileUpload fileUploadListener="#{MbLeerExcel.subirArchivoGrupoEmpresarial}" style="width: 50%"
-                                              multiple="false" fileLimitMessage="Número de archivos permitidos 1."
-                                              mode="advanced" dragDropSupport="false" label="Seleccionar" cancelLabel="Cancelar" uploadLabel="Subir" 
-                                              invalidFileMessage="Tipo de archivo no soportado" 
-                                              update="msnInforUnidadLegal" fileLimit="1" allowTypes="/(\.|\/)(xls)$/" />
+                                <ui:include src="../utilidades/cpt-cargar-archivo-xls.xhtml">
+                                    <ui:param name="frmPadre" value="frmInfUnidadLegal" />
+                                </ui:include>
                             </div>
                         </div>
                     </div>
@@ -86,6 +91,14 @@
 
                     <p:blockUI block="@form" trigger="btnGenerarReporteUnidadLegal" >
                         Generando reporte...<br />
+                        <p:graphicImage name="imagen/ajax-loading.gif"/>
+                    </p:blockUI>
+                    <p:blockUI block="@form" trigger="btnDescargarReporteUnidadLegal" >
+                        Descargando reporte...<br />
+                        <p:graphicImage name="imagen/ajax-loading.gif"/>
+                    </p:blockUI>
+                    <p:blockUI block="@form" trigger="btnGenerarXlsUnidadLelgal" >
+                        Generando archivo...<br />
                         <p:graphicImage name="imagen/ajax-loading.gif"/>
                     </p:blockUI>
                 </h:form>
